--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>base-core</module>
         <module>base-test</module>
         <module>base-util</module>
+        <module>base-authentication</module>
     </modules>
 
     <parent>
