--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>base-test</module>
         <module>base-util</module>
         <module>base-authentication</module>
+        <module>base-dynamic-datasource</module>
     </modules>
 
     <parent>
