--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>base-util</module>
         <module>base-authentication</module>
         <module>base-dynamic-datasource</module>
+        <module>base-zookeeper-master</module>
     </modules>
 
     <parent>
