feat(location): 动态数据源，可以使用

--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>base-authentication</module>
         <module>base-dynamic-datasource</module>
         <module>base-zookeeper-master</module>
+        <module>base-dynamic-datasource-test</module>
     </modules>
 
     <parent>
