--- a/base-master-election/pom.xml
+++ b/base-master-election/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>base-zookeeper-master</artifactId>
+    <artifactId>base-master-election</artifactId>
 
     <dependencies>
         <dependency>
