--- a/pom.xml
+++ b/pom.xml
@@ -14,12 +14,13 @@
         <module>base-authentication</module>
         <module>base-dynamic-datasource</module>
         <module>base-master-election</module>
+        <module>base-log</module>
     </modules>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.0.5.RELEASE</version>
+        <version>2.1.3.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
