--- a/base-distribution-scheduling/pom.xml
+++ b/base-distribution-scheduling/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>base-distribution-lock</artifactId>
+    <artifactId>base-distribution-scheduling</artifactId>
 
     <dependencies>
         <dependency>
