--- a/base-test/pom.xml
+++ b/base-test/pom.xml
@@ -18,7 +18,7 @@
     <dependencies>
         <dependency>
             <groupId>com.example</groupId>
-            <artifactId>base-distribution-lock</artifactId>
+            <artifactId>base-distribution-scheduling</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
         <dependency>
