--- a/pom.xml
+++ b/pom.xml
@@ -13,9 +13,8 @@
         <module>base-util</module>
         <module>base-authentication</module>
         <module>base-dynamic-datasource</module>
-        <module>base-master-election</module>
         <module>base-log</module>
-        <module>base-distribution-lock</module>
+        <module>base-distribution-scheduling</module>
         <module>base-test</module>
     </modules>
 
