refactor: 分布式公平锁

--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>base-log</module>
         <module>base-distribution-scheduling</module>
         <module>base-test</module>
+        <module>base-distribution-lock</module>
     </modules>
 
     <parent>
